[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "soshi-okada83",email = "soshi.okada83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >=1.24,<2.0",
    "matplotlib >=3.7,<4.0"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
